<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.app.qrcodescanner.viewmodel.CreatePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CreatePassword">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvcreatepassword"
                style="@style/regularfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/password_guild_line"
                android:textColor="@color/black_1"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvtitle"
                style="@style/boldfont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_password"
                android:textColor="@color/black_1"
                android:textSize="@dimen/_22sdp"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordlayout"
                style="@style/materialStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:hint="@string/enter_email"
                app:layout_goneMarginEnd="@dimen/_32sdp"
                app:layout_goneMarginStart="@dimen/_32sdp"
                app:passwordToggleEnabled="true">
                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpassword"
                    style="@style/edittextlogintitle"
                    android:gravity="start"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpasswordlayout"
                style="@style/materialStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:layout_goneMarginEnd="@dimen/_32sdp"
                app:layout_goneMarginStart="@dimen/_32sdp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etconfirmpassword"
                    style="@style/edittextlogintitle"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/comfirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbutton"
                style="@style/mainbutton"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/create_password"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvreset" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>