<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.app.qrcodescanner.viewmodel.ForgotPassowordViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.Login">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llforgotpassContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:visibility="invisible" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/regularfont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_6_digit_code_to_reset_your_password"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/_11sdp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvtitle"
                    style="@style/boldfont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black_1"
                    android:textSize="@dimen/_22sdp"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emaillayout"
                    style="@style/materialStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    app:layout_goneMarginEnd="@dimen/_32sdp"
                    app:layout_goneMarginStart="@dimen/_32sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etemail"
                        style="@style/edittextlogintitle"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress|textNoSuggestions" />


                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginbutton"
                    style="@style/mainbutton"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/submit"
                    android:textAllCaps="false" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
