<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.qrcodescanner.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_grey"
        tools:context=".ui.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/lllogincontainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_30sdp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_80sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvtitle"
                        style="@style/boldfont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="@color/black_1"
                        android:textSize="@dimen/_30sdp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emaillayout"
                        style="@style/materialStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:hint="@string/enter_email"
                        android:textColorHint="@color/black_1"
                        app:boxStrokeWidthFocused="@dimen/_1sdp"
                        app:errorEnabled="true"
                        app:errorIconTint="@color/white"
                        app:layout_goneMarginEnd="@dimen/_32sdp"
                        app:layout_goneMarginStart="@dimen/_32sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etemail"
                            style="@style/edittextlogintitle"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordlayout"
                        style="@style/materialStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:hint="@string/enter_password"
                        android:textColorHint="@color/black_1"
                        app:boxStrokeWidthFocused="@dimen/_1sdp"
                        app:errorEnabled="true"
                        app:layout_goneMarginEnd="@dimen/_32sdp"
                        app:layout_goneMarginStart="@dimen/_32sdp"
                        app:passwordToggleEnabled="true">
                        <!--this is the actual edit text which takes the input-->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etpassword"
                            style="@style/edittextlogintitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_8sdp"
                            android:gravity="start"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvforgotpasssword"
                            style="@style/boldfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textAlignment="textEnd"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_11sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginbutton"
                        style="@style/mainbutton"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/login"
                        android:textAllCaps="false" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/boldfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_any_query"
                            android:textAlignment="center"
                            android:textColor="@color/black_1"
                            android:textSize="@dimen/_12sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/llsignup"
                            style="@style/boldfont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_us"
                            android:textAlignment="center"
                            android:textColor="@color/red"
                            android:textSize="@dimen/_12sdp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>